--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <div class="container">
       <div class="modal">
         <div class="modal-content">
+          <img src="public/gift.png" width="200px" alt="" />
           <h2>🎉 恭喜你！🎉</h2>
           <p>
             你成為我們珍貴的第 144,000 用戶，為了感謝你努力的受印與傳道<br />
-            我們決定送你一份驚喜大禮包 - 情報通信科的導覽介紹門票<br />
-            此禮品為你專屬量身打造，請點擊「領取獎品」
+            我們決定送你一份驚喜大禮包 -
+            <span style="font-weight: 700">情報通信科的導覽介紹門票</span><br />
+            此禮品為你專屬量身打造，請點擊<span
+              style="color: red; font-weight: 700"
+              >「領取獎品」</span
+            >
           </p>
           <button id="claim-prize-button" class="btn">領取獎品</button>
         </div>
