--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
       <div class="wrapper">
         <section class="section1">
           <h1>情報通信科介紹</h1>
-          <div style="display: flex; gap: 1rem; align-items: center">
+          <div class="flex-container">
             <blockquote>
               今天是情報通信的時代，情報通信部是新天地的號角、新天地的矛與盾。
               <span>總會長</span>
@@ -36,7 +36,7 @@
               透過資訊通訊領域，讓聖徒都成為第七枝號角和勝利的號角，宣傳介紹新天地
             </li>
             <li>
-              事前預防網路傳道的危險因素，與其他部署進行討論，針對網路傳到問題點進行教育
+              事前預防網路傳道的危險因素，與其他部署進行討論，針對網路傳道問題點進行教育
             </li>
           </ul>
           <img src="public/image2.jpg" alt="" width="400px" />
@@ -44,18 +44,22 @@
         <section class="section3">
           <h1>我們在做什麼？</h1>
           <ul>
-            <li>Zoom 開窗錄製：禮拜/教育/中心</li>
-            <li>設備操作：線下活動（傳道場）</li>
+            <li><span>Zoom 開窗錄製：</span>禮拜/教育/中心</li>
+            <li><span>設備操作：</span>線下活動（傳道場）</li>
             <li>
-              系統開發和維運：中心平台(Lincle)、內部平台(線上錫安宣教中心)
+              <span>系統開發和維運：</span
+              >中心平台(Lincle)、內部平台(線上錫安宣教中心)
             </li>
-            <li>真聖新文章發佈</li>
-            <li>資料保存/資安管理及教育</li>
+            <li><span>真聖新文章發佈</span></li>
+            <li><span>資料保存/資安管理及教育</span></li>
           </ul>
           <blockquote>
             情報通信科，是一個擁抱新知，不斷學習與成長的地方。儘管是從未接觸過的挑戰
             ，帶著「做就能行！」的精神都能完成
           </blockquote>
+          <div style="display: flex; justify-content: center">
+            <img src="public/joinus.png" width="60%" alt="" />
+          </div>
         </section>
       </div>
     </div>
